# dlserverpicker

./: CMakeLists.txt  CMakePresets.json  DeadlockServerPicker.cpp  DeadlockServerPicker.fbp  DeadlockServerPicker.h  DeadlockServerPicker.rc  FirewallManager.h  LICENSE  Layout.gen.cpp  Layout.gen.h  MainFrame.cpp  MainFrame.h  PingTest.h  README.md  ServerData.cpp  ServerData.h  ServerDataModel.cpp  ServerDataModel.h  Version.h  WindowsFirewallManager.cpp  WindowsPingTest.cpp
.github/workflows/: build.yml
